<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Urdaneta Food Map</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signin">Sign Up</string>
    <string name="title_activity_second">Profile</string>
    <string name="logout">Log Out</string>
    <string name="cam">Camera</string>
    <string name="file">Files</string>
    <string name="map">Map</string>
    <string name="star">Star</string>
    <string name="Welcome">Welcome!</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_third">Camera</string>

</resources>