<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6D6F2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucuccs.urdanetafoodmap.Second" >

    <TextView
        android:id="@+id/txtuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#F7E892" />

    <ImageButton
        android:id="@+id/btncamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtuser"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/cam"
        android:src="@drawable/cam" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btncamera"
        android:layout_marginRight="42dp"
        android:layout_toLeftOf="@+id/txtuser"
        android:contentDescription="@string/file"
        android:src="@drawable/file" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btncamera"
        android:layout_centerVertical="true"
        android:contentDescription="@string/map"
        android:src="@drawable/map" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_centerVertical="true"
        android:contentDescription="@string/star"
        android:src="@drawable/star" />

</RelativeLayout>